# advent_of_code

./: README.md  build.sh  pyproject.toml
python/2022/: AoC_1.ipynb  AoC_10.py  AoC_11.py  AoC_12.py  AoC_13.py  AoC_14.py  AoC_14a.py  AoC_15.py  AoC_18.py  AoC_2.ipynb  AoC_21.py  AoC_3.ipynb  AoC_4.ipynb  AoC_5.ipynb  AoC_6.ipynb  AoC_7.py  AoC_8.py  AoC_9.py  cubes.ipynb  day18a_data  day21a_data  day5b_data  day8a_data
python/2023/01_trebuchet/: aoc202301.py  test_aoc202301.py
python/2023/02_cube_conundrum/: aoc202302.py  test_aoc202302.py
python/2023/03_gear_ratios/: aoc202303.py  test_aoc202303.py
python/2023/04_scratchcards/: README.md  aoc202304.py  test_aoc202304.py
python/2023/05_if_you_give_a_seed_a_fertiliser/: aoc202305.py  test_aoc202305.py
python/2023/06_wait_for_it/: aoc202306.py  test_aoc202306.py
python/2023/07_camel_cards/: README.md  aoc202307.py  test_aoc202307.py
python/2023/08_haunted_wasteland/: README.md  aoc202308.py  test_aoc202308.py
python/2023/09_mirage_maintenance/: README.md  aoc202309.py  test_aoc202309.py
python/2023/10_pipe_maze/: README.md  aoc202310.py  test_aoc202310.py
python/2023/11_cosmic_expansion/: README.md  aoc202311.py  test_aoc202311.py
python/2023/12_hot_springs/: README.md  aoc202312.py  test_aoc202312.py
python/2023/13_point_of_incidence/: README.md  aoc202313.py  test_aoc202313.py
python/2023/15_lens_library/: README.md  aoc202315.py  test_aoc202315.py
python/2023/16_the_floor_will_be_lava/: README.md  aoc202316.py  test_aoc202316.py
python/2023/18_lavaduct_lagoon/: README.md  aoc202318.py  (+1 more)
(+37 files in other folders)
